STORE-1389 - Fix asset spacing issue

--- a/apps/store/themes/store/css/custom.css
+++ b/apps/store/themes/store/css/custom.css
@@ -1415,7 +1415,6 @@ h2.app-title {
 }
 .ctrl-wr-asset {
     position: relative;
-    height: 255px;
     background: #fff;
     width:150px;
     float:left;
